
* Simplified draw_objs function in a variety of ways
* Made audio file reading code honor the DATADIR setting.  Three people
  involved in this patch, myself, Ingo Ruhnke back in May of 2010, and
  "Denis 'GNUtoo' Carikli" in May of 2011.
* Changed Makefile to allow for cross compiling.  This patch is from
  "Denis 'GNUtoo' Carikli" who ported Word War vi to the OpenPandora.

Sun Aug  9 09:28:23 CDT 2009
-------------------------------------------------------------------------------
Changes between version 0.25 and 0.26

* Now the --bw option renders the game in white plus 2 shades of gray, rather than just
  strictly black and white (so you can read the "FUEL" sign on the fuel tanks now), and
* Added code to try to inhibit the screensaver.  It is not currently
  activated by default, as for example, on Fedora Core 5,
  xdg-screensaver is broken.
* Don't bother to decode the audio data unless portaudio started up ok.
* Cleaned up ogg_to_pcm.c and ogg_to_pcm.h slightly.  No significant
  functionality changes.
* More clean up of ogg_to_pcm.c
* a little more minor cleanup of ogg_to_pcm.[ch].  Cosmetic changes really.
* Cleaned up wwviaudio.c wwviaudio.h a little bit
* Cosmetic code changes... added ARRAY_SIZE macro and setup_vect macro
  to eliminate some verbose and repetitive code.
* Reduced level of nesting of braces a couple levels in the octopus
  creating code by judicious use of "continue".
* Added idempotent preserving ifdefs for rumble.h, changed some
  functions that took () to take (void) insteadh.
* Pulled definitions of struct my_point and struct my_vect_obj out of wordwarvi.c
  and put them in my_point.h
* Pulled font related code out into wwvi_font.[ch]
* include wwvi_font.[ch] in the tarball
* Add LINE_BREAK and COLOR_CHANGE to my_point.h
* If two minutes elapse in attract mode with no user interaction, turn off sound.
  At the first user interaction (e.g. keypress) turn sound back on.  (Basically,
  cut down the annoyance factor of attract mode.)